# setwlkbmap

./: Cargo.toml  README.txt
.github/workflows/: rust.yml
src/: command.rs  lib.rs  main.rs
