[package]
name = "setwlkbmap"
version = "0.1.0"
authors = ["derdilla <contact@derdilla.com>"]
edition = "2021"

[lib]
name = "setwlkbmap"
path = "src/lib.rs"

[[bin]]
name = "setwlkbmap"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
detect-desktop-environment = { version = "1.2.0", git = "https://github.com/derdilla/detect-desktop-environment.git" }
regex = "1.11.1"
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
cosmic-comp-config = { git = "https://github.com/pop-os/cosmic-comp" }

# enable release build link time optimization
[profile.release]
lto = true
